@@ -1,3 +1,9 @@
+2013-12-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* configure.ac (AC_FUNC_VPRINTF): Remove. Not needed on current
+	systems.
+	* awk.h (HAVE_VPRINTF): Remove check.
+
 2013-12-10         Scott Deifik          <scottd.mail@sbcglobal.net>
 
 	* io.c (closemaybesocket): Add definition for DJGPP.
